SPARK-1077 - Add localization support for hardcoded strings in the GUI
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11367 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -453,6 +453,11 @@ label.trust.store.password = Trust Store Password
 label.enter.password = Enter Password
 label.move.focus.forwards = Move Focus Forwards
 label.move.focus.backwards = Move Focus Backwards
+label.keystore.location = Keystore Location
+label.truststore.location = Truststore Location
+label.pkcs.library.file = PKCS#11 Library File
+label.x509.certificate = X.509 Certificate
+label.apple.keychain = Apple KeyChain
 
 menuitem.about = About
 menuitem.actions = Actions
