SPARK-1076 - Add lithuanian translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11392 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -428,11 +428,15 @@ label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Kuris PKI metodas?
 label.choose.file = Pasirinkti fail\u0105
-label.trust.store.password = Trust Store Password
+label.trust.store.password = Patikim\u0173 sertifikat\u0173 saugyklos slapta\u017eodis
 label.enter.password = \u012evesti slapta\u017eod\u012f
-label.move.focus.forwards = Perkelti fokus\u0105 pirmyn
-label.move.focus.backwards = Perkelti fokus\u0105 atgal
-
+label.move.focus.forwards = Fokusas pirmyn
+label.move.focus.backwards = Fokusas atgal
+label.keystore.location = Rakt\u0173 saugyklos vieta
+label.truststore.location = Patikim\u0173 sertifikat\u0173 saugyklos vieta
+label.pkcs.library.file = PKCS#11 bibliotekos failas
+label.x509.certificate = X.509 sertifikatas
+label.apple.keychain = Apple KeyChain
 
 menuitem.about = Apie
 menuitem.actions = Veiksmai
@@ -529,9 +533,9 @@ menuitem.refresh = Atnaujinti
 menuitem.create.room = Sukurti arba aplankyti pokalbi\u0173 kambar\u012f
 menuitem.expand.all.groups = Vis\u0173 grupi\u0173 i\u0161skleidimas
 menuitem.collapse.all.groups = Vis\u0173 grupi\u0173 sutraukimas
-
+menuitem.inivite.again = V\u0117l pakviesti
 menuitem.chatframe.option = Parinktys
-
+message.invite.to.groupchat = {0} Jus pakviet\u0117 prisijungti \u012f pokalbi\u0173 grup\u0119.
 message = Transliuojamas prane\u0161imas
 message.account.create = Naujos paskyros suk\u016brimas
 message.account.created = Nauja paskyra sukurta
@@ -758,7 +762,7 @@ message.your.ownership.revoked = Netekote savininko privilegij\u0173.
 message.your.revoked.granted = Netekote administratoriaus privilegij\u0173.
 message.your.voice.granted = \u0160iame pokalbyje Jums suteiktas balsas.
 message.your.voice.revoked = Netekote balso.
-
+message.groupchat.require.password = \u0160i pokalbi\u0173 grup\u0117 priims, jei \u012fvesite slapta\u017eod\u012f.
 status.available = Pasiekiamas
 status.away = Pasitrauk\u0119s
 status.custom.messages = Susikurtos b\u016bsenos
@@ -926,3 +930,4 @@ tooltip.view.readme = Skaityti \u201eReadMe\u201c fail\u0105
 
 tree.conference.services = Konferencijos
 tree.users.in.room = Kambaryje apsilank\u0119
+
