SPARK-896 - Spark chat logs should be searchable
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11407 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -785,6 +785,7 @@ message.your.revoked.granted = Your admin privileges have been revoked.
 message.your.voice.granted = You have been given a voice in this chat.
 message.your.voice.revoked = Your voice has been revoked.
 message.groupchat.require.password = This group chat room requires a password to enter.
+message.search.for.history = Search conversation history
 
 status.available = Available
 status.away = Away
