Fix hardcoded strings Update chinese translation thx to yujiaao Update Russion translation thx to Konstantin
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11413 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -204,6 +204,13 @@
 ## 2.6.0
 ##
 ## 	   Added key: 'apply'
+## 	   Added key: 'title.subscription.request'
+## 	   Added key: 'label.add.to.roster'
+## 	   Added key: 'label.audio.device'
+## 	   Added key: 'label.video.device'
+## 	   Added key: 'button.re.detect'
+
+
 
 accept = Accept
 active = Active
@@ -298,6 +305,7 @@ button.update = &Update
 button.view.notes = View Notes
 button.view.profile = View Full Profile
 button.view.tasklist = View Task List
+button.re.detect = Re-Detect
 
 checkbox.allow.buzz = Allow users to buz&z you.
 checkbox.auto.discover.port = &Automatically discover host and port
@@ -458,6 +466,9 @@ label.truststore.location = Truststore Location
 label.pkcs.library.file = PKCS#11 Library File
 label.x509.certificate = X.509 Certificate
 label.apple.keychain = Apple KeyChain
+label.add.to.roster = Add user to your roster
+label.audio.device = Audio Device
+label.video.device = Video Device
 
 menuitem.about = About
 menuitem.actions = Actions
@@ -941,6 +952,7 @@ title.waiting.to.call = Waiting to place call
 title.xmpp.registration = XMPP Account Credentials
 title.yahoo.registration = Yahoo Account Credentials
 title.appearance.showVCards = Show VCards in the Contactlist
+title.subscription.request= Subscription Request
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.appearance = Change the appearance of your conversations.
