--- a/src/resources/i18n/spark_i18n_ru_RU.properties
+++ b/src/resources/i18n/spark_i18n_ru_RU.properties
@@ -1,4 +1,4 @@
-\uFEFF##
+##
 ## Spark Resource Bundle
 ##
 ## Additional locales can be specified by creating a new resource file in this
@@ -104,6 +104,11 @@
 ##
 ##
 ##
+## 	   Added key: 'title.subscription.request'
+## 	   Added key: 'label.add.to.roster'
+## 	   Added key: 'label.audio.device'
+## 	   Added key: 'label.video.device'
+## 	   Added key: 'button.re.detect'
 
 
 
@@ -183,6 +188,7 @@ button.send = \u041F\u043E\u0441\u043B\u0430\u0442\u044C
 button.view.notes = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0417\u0430\u043C\u0435\u0442\u043A\u0438
 button.view.profile = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u041F\u043E\u043B\u043D\u0443\u044E \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E
 button.view.tasklist = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0421\u043F\u0438\u0441\u043E\u043A \u0417\u0430\u0434\u0430\u0447
+button.re.detect = \u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C
 
 
 
@@ -300,6 +306,9 @@ label.conflict.error = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u0
 label.message.style = \u0421\u0442\u0438\u043B\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
 label.emoticons = \u0421\u043C\u0430\u0439\u043B\u0438\u043A\u0438
 label.user.on.public.network = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0438\u0437 \u0441\u0435\u0442\u0438
+label.add.to.roster = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0432 \u0441\u043F\u0438\u0441\u043E\u043A \u043A\u043E\u043D\u0442\u0430\u043A\u0442\u043E\u0432
+label.audio.device = \u0410\u0443\u0434\u0438\u043E \u0443\u0441\u0442\u0440\u043E\u0439\u0441\u0442\u0432\u0430
+label.video.device = \u0412\u0438\u0434\u0435\u043E \u0443\u0441\u0442\u0440\u043E\u0439\u0441\u0442\u0432\u0430
 
 message.alert.notify = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
 message.username.error = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F.
@@ -610,6 +619,7 @@ title.add.contact.group = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043
 title.add.contact = \u0414\u043E\u0431\u0430\u0432\u0438\u0442 \u043A\u043E\u043D\u0442\u0430\u043A\u0442
 title.file.transfer.preferences = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438 \u0444\u0430\u0439\u043B\u043E\u0432
 title.file.transfer = \u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0444\u0430\u0439\u043B\u043E\u0432
+title.subscription.request= \u0417\u0430\u043F\u0440\u043E\u0441 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u0438
 
 menuitem.always.on.top = \u0412\u0441\u0435\u0433\u0434\u0430 \u043F\u043E\u0432\u0435\u0440\u0445
 menuitem.bookmarks = \u0417\u0430\u043A\u043B\u0430\u0434\u043A\u0438
