--- a/src/resources/i18n/spark_i18n_zh_CN.properties
+++ b/src/resources/i18n/spark_i18n_zh_CN.properties
@@ -252,6 +252,7 @@ button.join.room           = (&J) \u52A0\u5165\u9009\u62E9\u7684\u623F\u95F4
 button.new                 = (&N) \u6DFB\u52A0
 button.profile             = (&P) \u7B80\u4ECB
 button.quit                = (&Q) \u79BB\u5F00
+button.re.detect           = \u91CD\u65B0\u68C0\u6D4B
 button.reconnect           = (&R) \u91CD\u65B0\u8FDE\u63A5
 button.reconnect2          = \u91CD\u65B0\u8FDE\u63A5
 button.refresh             = (&R) \u5237\u65B0
@@ -280,6 +281,7 @@ checkbox.auto.discover.port               = (&A) \u81EA\u52A8\u68C0\u6D4B\u4E3B\
 checkbox.auto.login                       = (&A) \u81EA\u52A8\u767B\u5F55
 checkbox.broadcast.hide.offline.user      = \u9690\u85CF\u79BB\u7EBF\u8054\u7CFB\u4EBA
 checkbox.disable.chat.history             = (&D) \u5BF9\u8BDD\u5386\u53F2\u4E0D\u53EF\u7528
+checkbox.disable.prev.chat.history        = \u4E0D\u663E\u793A\u4EE5\u5F80\u804A\u5929\u8BB0\u5F55
 checkbox.enable.emoticons                 = (&O) \u663E\u793A\u8868\u60C5
 checkbox.idle.enabled                     = (&I) \u5141\u8BB8\u7A7A\u95F2\u7B49\u5F85
 checkbox.launch.on.startup                = (&L) \u968F\u7CFB\u7EDF\u542F\u52A8
@@ -300,9 +302,9 @@ checkbox.show.avatars.in.contactlist      = (&A)\u5728\u8054\u7CFB\u4EBA\u5217\u
 checkbox.show.notifications.in.conference = (&S) \u5728\u4F1A\u8BAE\u5BA4\u663E\u793A\u901A\u77E5
 checkbox.show.time.in.chat.window         = (&S) \u5728\u5BF9\u8BDD\u7A97\u53E3\u663E\u793A\u65F6\u95F4
 checkbox.show.toaster                     = (&T) \u663E\u793A\u4E00\u4E2A\u5F39\u51FA\u7A97\u53E3
-checkbox.split.chat.window                = (&W) \u804A\u5929\u7A97\u53E3\u505C\u9760 (\u8981\u6C42\u91CD\u65B0\u542F\u52A8spark)
+checkbox.split.chat.window                = (&W) \u804A\u5929\u7A97\u53E3\u505C\u9760 (\u8981\u6C42\u91CD\u65B0\u542F\u52A8)
 checkbox.start.in.tray                    = (&S) \u542F\u52A8\u540E\u663E\u793A\u5230\u7CFB\u7EDF\u6258\u76D8\u4E2D
-checkbox.tabs.on.top                      = (&C) \u8054\u7CFB\u4EBA\u6807\u7B7E\u7F6E\u9876\u7AEF(\u8981\u6C42\u91CD\u65B0\u542F\u52A8spark)
+checkbox.tabs.on.top                      = (&C) \u8054\u7CFB\u4EBA\u6807\u7B7E\u7F6E\u9876\u7AEF(\u8981\u6C42\u91CD\u65B0\u542F\u52A8)
 checkbox.use.compression                  = (&m)\u542F\u7528\u538B\u7F29
 checkbox.use.debugger.on.startup          = \u542F\u52A8\u65F6\u8FDB\u5165\u8C03\u8BD5\u6A21\u5F0F
 checkbox.use.krb.dns                      = \u4F7F\u7528DNS
@@ -310,7 +312,7 @@ checkbox.use.krbconf                      = \u4F7F\u7528krb5.conf \u6216 krb5.in
 checkbox.use.pki.authentication           = \u7528PKI\u9A8C\u8BC1
 checkbox.use.proxy.server                 = (&U) \u4F7F\u7528\u4EE3\u7406\u670D\u52A1\u5668
 checkbox.use.specify.below                = \u8BF4\u660E\u5982\u4E0B
-checkbox.use.system.look.and.feel         = (&F) \u4F7F\u7528\u7CFB\u7EDF\u5916\u89C2(\u8981\u6C42\u91CD\u65B0\u542F\u52A8Spark)
+checkbox.use.system.look.and.feel         = (&F) \u4F7F\u7528\u7CFB\u7EDF\u5916\u89C2(\u8981\u6C42\u91CD\u65B0\u542F\u52A8)
 checkbox.window.to.front                  = (&B) \u7A97\u53E3\u7F6E\u4E8E\u6700\u524D\u9762
 
 close = \u5173\u95ED
@@ -350,6 +352,8 @@ label.accounts                    = (&A) \u8D26\u53F7
 label.add.conference.service      = (&A) \u6DFB\u52A0\u4F1A\u8BAE\u670D\u52A1
 label.add.jid                     = (&A) \u6DFB\u52A0JID
 label.add.task                    = \u6DFB\u52A0\u4EFB\u52A1
+label.add.to.roster               = \u52A0\u5230\u8054\u7CFB\u4EBA\u5217\u8868
+label.audio.device                = \u97F3\u9891\u8BBE\u5907
 label.auto.login                  = (&A) \u81EA\u52A8\u767B\u5F55
 label.available.users.in.roster   = (&A) \u5728\u7EBF\u8054\u7CFB\u4EBA\u5217\u8868
 label.cancel                      = \u53D6\u6D88
@@ -441,6 +445,7 @@ label.use.default                 = \u4F7F\u7528\u9ED8\u8BA4
 label.user.on.public.network      = \u7528\u6237\u4F4D\u4E8E\u4E00\u4E2A\u516C\u5171\u7F51\u7EDC\u4E0A
 label.username                    = (&U) \u7528\u6237
 label.version                     = (&V) \u7248\u672C
+label.video.device                = \u89C6\u9891\u8BBE\u5907
 label.web.page                    = (&W) \u7F51\u9875
 label.which.pki.method            = \u54EA\u4E2APKI\u65B9\u6CD5\uFF1F
 label.work                        = \u5DE5\u4F5C
@@ -522,7 +527,7 @@ menuitem.send.a.message                     = \u5C06\u5E7F\u64AD\u9001\u5F80\u63
 menuitem.set.status.message                 = \u8BBE\u7F6E\u72B6\u6001\u6D88\u606F ...
 menuitem.show.contact.statusmessage         = \u663E\u793A\u72B6\u6001\u4FE1\u606F
 menuitem.show.empty.groups                  = \u663E\u793A\u7A7A\u56E2\u4F53
-menuitem.show.offline.group                 = \u56E2\u4F53\u79BB\u7EBF\u4F7F\u7528\u8005
+menuitem.show.offline.group                 = \u5BF9\u79BB\u7EBF\u4F7F\u7528\u8005\u5206\u7EC4
 menuitem.show.offline.users                 = \u663E\u793A\u79BB\u7EBF\u7528\u6237
 menuitem.show.traffic                       = \u663E\u793A\u901A\u4FE1\u91CF\u7A97\u53E3
 menuitem.sign.in                            = \u7B7E\u5230
@@ -544,7 +549,7 @@ menuitem.view.profile                       = \u67E5\u770B\u7B80\u4ECB
 menuitem.view.room.info                     = \u67E5\u770B\u623F\u95F4\u4FE1\u606F
 menuitem.voice                              = \u58F0\u97F3
 
-message = (&M)\u6D88\u606F
+message = \u6D88\u606F
 
 message,gateway.username.error = \u5FC5\u987B\u63D0\u4F9B\u7528\u6237\u540D.
 
@@ -597,7 +602,7 @@ message.disconnected.error                 = \u53D1\u751F\u4E00\u4E2A\u9519\u8BE
 message.disconnected.group.chat.error      = \u53D1\u751F\u4E00\u4E2A\u9519\u8BEF\uFF0C\u8FDE\u63A5\u88AB\u5173\u95ED\u3002 \u4F60\u53EF\u80FD\u9700\u8981\u5728\u91CD\u65B0\u8FDE\u63A5\u540E\u518D\u52A0\u5165\u6B64\u804A\u5929\u5BA4\u3002
 message.disconnected.shutdown              = \u7531\u4E8E\u670D\u52A1\u5668\u5173\u95ED\uFF0C\u60A8\u7684\u8FDE\u63A5\u88AB\u7EC8\u6B62.
 message.downloading                        = \u4E0B\u8F7D{0}
-message.downloading.spark.plug             = \u4E0B\u8F7DSpark\u63D2\u4EF6
+message.downloading.spark.plug             = \u4E0B\u8F7D\u63D2\u4EF6
 message.end.chat                           = \u4F60\u8981\u7ED3\u675F\u6B64\u6B21\u5BF9\u8BDD\u5417\uFF1F
 message.end.conversation                   = \u4F60\u8981\u7ED3\u675F\u672C\u6B21\u4F1A\u8BAE\u5417\uFF1F
 message.enter.aim                          = \u8BF7\u8F93\u5165\u4F60\u7684AIM\u8D26\u53F7\u548C\u5BC6\u7801\u3002
@@ -685,9 +690,9 @@ message.reconnect.wait                     = {0} \u79D2\u540E\u91CD\u65B0\u8FDE\
 message.register.transports                = \u6CE8\u518C\u6240\u6709\u53EF\u7528\u7684\u4F20\u9001\u65B9\u5F0F\u3002
 message.registering                        = \u6B63\u5728\u6CE8\u518C{0}\u3002 \u8BF7\u7B49\u5F85\u2026
 message.registration.transport.failed      = \u65E0\u6CD5\u5411\u7F51\u7BA1\u6CE8\u518A\u3002
-message.restart.required                   = \u8981\u4F7F\u65B0\u8BBE\u7F6E\u751F\u6548\uFF0C\u5FC5\u987B\u5173\u95ED\u5E76\u91CD\u65B0\u542F\u52A8Spark.\n\u8981\u7ACB\u5373\u91CD\u65B0\u542F\u52A8Spark\u5417?
+message.restart.required                   = \u8981\u4F7F\u65B0\u8BBE\u7F6E\u751F\u6548\uFF0C\u5FC5\u987B\u5173\u95ED\u5E76\u91CD\u65B0\u542F\u52A8.\n\u8981\u7ACB\u5373\u91CD\u65B0\u542F\u52A8\u5417?
 message.restart.spark                      = \u4F60\u9700\u8981\u5173\u95ED\u5BA2\u6237\u7AEF\u4EE5\u5B89\u88C5\u6700\u65B0\u7684\u7248\u672C\u3002 \u662F\u5426\u73B0\u5728\u5B89\u88C5\uFF1F
-message.restart.spark.changes              = \u63D2\u4EF6\u5C06\u5728\u4E0B\u6B21\u542F\u52A8Spark\u65F6\u88AB\u79FB\u9664\u3002
+message.restart.spark.changes              = \u63D2\u4EF6\u5C06\u5728\u4E0B\u6B21\u542F\u52A8\u65F6\u88AB\u79FB\u9664\u3002
 message.restart.spark.to.install           = \u4F60\u9700\u8981\u5173\u95ED\u5BA2\u6237\u7AEF\u4EE5\u5B89\u88C5\u6700\u65B0\u7684\u7248\u672C\u3002 \u662F\u5426\u73B0\u5728\u5B89\u88C5\uFF1F
 message.room.creation.error                = \u804A\u5929\u5BA4\u4E0D\u80FD\u88AB\u521B\u5EFA\u3002
 message.room.destroyed                     = \u6B64\u804A\u5929\u5BA4\u5DF2\u88AB\u64A4\u9500\uFF0C\u539F\u56E0\u5982\u4E0B\uFF1A {0}
@@ -871,7 +876,7 @@ title.disable.transport               = \u79FB\u9664\u767B\u5F55\u4FE1\u606F
 title.download.complete               = \u4E0B\u8F7D\u5B8C\u6210
 title.downloading.im.client           = \u4E0B\u8F7D IM \u5BA2\u6237\u7AEF
 title.downloads                       = \u4E0B\u8F7D
-title.edit.custom.message             = \u7F16\u8F91\u81EA\u5B9A\u4E49\u6D88\u606F
+title.edit.custom.message             = \u7F16\u8F91\u7528\u6237\u72B6\u6001
 title.edit.profile                    = \u7F16\u8F91\u7B80\u4ECB\u4FE1\u606F
 title.enter.reason                    = \u8F93\u5165\u7406\u7531
 title.error                           = \u9519\u8BEF
@@ -889,6 +894,7 @@ title.find.conference.service         = \u67E5\u627E\u4F1A\u8BAE\u670D\u52A1
 title.find.contacts                   = \u67E5\u627E\u8054\u7CFB\u4EBA
 title.gadugadu.registration           = GaduGadu \u8D26\u53F7\u8BBE\u7F6E
 title.general.chat.settings           = \u603B\u7684\u95F2\u804A\u8BBE\u7F6E
+title.general.media                   = \u591A\u5A92\u4F53\u8BBE\u7F6E
 title.group.chat                      = \u7EC4\u5BF9\u8BDD
 title.group.chat.settings             = \u7EC4\u804A\u8BBE\u7F6E
 title.gtalk.registration              = GTalk \u8D26\u53F7\u8BBE\u7F6E
@@ -944,6 +950,7 @@ title.sounds                          = \u58F0\u97F3
 title.spark.preferences               = \u8BBE\u7F6E
 title.start.chat                      = \u5F00\u59CB\u804A\u5929
 title.status.message                  = \u72B6\u6001\u6D88\u606F
+title.subscription.request            = \u6DFB\u52A0\u597D\u53CB\u8BF7\u6C42
 title.task.notification               = \u4EFB\u52A1\u63D0\u793A
 title.tasks                           = \u4EFB\u52A1
 title.transports                      = \u4F20\u9001\u65B9\u5F0F
