SPARK-1127 - Correction of lithuanian translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11460 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -734,7 +734,7 @@ message.user.joined.room = {0} apsilank\u0117 kambaryje.
 message.user.kicked.from.room = {0} buvo i\u0161mestas i\u0161 kambario.
 message.user.left.room = {0} i\u0161\u0117jo i\u0161 kambario.
 message.user.nickname.changed = {0} dabar bus \u017einomas kaip {1}.
-message.user.now.available.to.chat = {0} yra prisijung\u0119s {1}
+message.user.now.available.to.chat = {0} prisijung\u0117 {1}
 message.user.revoked.admin = Administratoriaus privilegijos at\u0161auktos abonentui {0}.
 message.user.revoked.membership = Naryst\u0117s  privilegijos at\u0161auktos abonentui {0}.
 message.user.revoked.moderator = Pri\u017ei\u016br\u0117tojo privilegijos at\u0161auktos abonentui {0}.
