fix hardcoded labes
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11601 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -527,6 +527,8 @@ menuitem.remove.alert.when.online = Remove Alert
 menuitem.remove.bookmark = Remove Bookmark
 menuitem.remove.from.group = Remove From Group
 menuitem.remove.from.roster = Remove from Roster
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
 menuitem.remove.service = Remove Service
 menuitem.rename = Rename
 menuitem.revoke.moderator = Revoke Moderator
