SPARK-1120 - Spark should show who has changed room's topic
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11667 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -741,7 +741,7 @@ message.specify.name.error = Specify a valid name.
 message.specify.users.to.join.conference = Specify users to join this conference room.
 message.specify.valid.time.error = Specify a valid timeout and port.
 message.subject.change.error = You are not allowed to change the subject of this room.
-message.subject.has.been.changed.to = The subject has been changed to {0}.
+message.subject.has.been.changed.to = {1} changed the Subject to "{0}".
 message.supply.resource = Supply a valid resource.
 message.supply.valid.port = Supply a valid port.
 message.supply.valid.timeout = Supply a valid time out value.
