--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -412,7 +412,7 @@ message.chat.session.ended = Chatsitzung wurde beendet um {0}
 message.subject.change.error = Sie haben keine Rechte das Konferenzthema in diesem Raum zu ändern.
 message.forbidden.error = Sie haben nicht die Rechte für diese Aktion.
 message.room.destroyed = Dieser Raum wurde aus dem folgenden Grund gelöscht: {0}
-message.subject.has.been.changed.to = Das Thema der Konferenz wurde in "{0}" geändert.
+message.subject.has.been.changed.to = Das Thema der Konferenz wurde von {1} in "{0}" geändert.
 message.user.kicked.from.room = {0} wurde aus dem Raum ausgeladen.
 message.user.given.voice = {0} hat jetzt Schreibenrechte.
 message.user.voice.revoked = Schreibrechte wurde {0} entzogen.
