--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_fr.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_fr.properties
@@ -90,4 +90,19 @@ phone.confirmation = Confirmation
 phone.all = All
 phone.allcalls = All Calls
 phone.tocall = Call
-phone.numpattern = (xxx)xxx-xxxx
+btn.add  	= Add
+btn.edit 	= Edit
+btn.del  	= Delete
+btn.dial	= Call
+book.name 	= Name
+book.number = Number
+frame.title	= Phonebook
+book.search = Search
+btn.ok      = OK
+btn.cancel  = Cancel
+frame.add 	= "Add Entry"
+frame.edit 	= "Edit Entry"
+book.exists		= "The phonebook-entry you wish to add is already existing."
+book.noEntry	= "No Entry Selected!"
+book.fillFields = "Please fill all Fields"
+book.warning	= "Attention"
