--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_pt_BR.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_pt_BR.properties
@@ -90,5 +90,20 @@ phone.confirmation = Confirmação
 phone.all = Todas
 phone.allcalls = Todas Chamadas
 phone.tocall = Chamar
-phone.numpattern = xxx
 phone.enabled = Habilitar Telefone
+btn.add  	= Add
+btn.edit 	= Edit
+btn.del  	= Delete
+btn.dial	= Call
+book.name 	= Name
+book.number = Number
+frame.title	= Phonebook
+book.search = Search
+btn.ok      = OK
+btn.cancel  = Cancel
+frame.add 	= "Add Entry"
+frame.edit 	= "Edit Entry"
+book.exists		= "The phonebook-entry you wish to add is already existing."
+book.noEntry	= "No Entry Selected!"
+book.fillFields = "Please fill all Fields"
+book.warning	= "Attention"
