fix alaw SPARK-1149 - Allow to disable and reorder sip codecs
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11755 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_de.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_de.properties
@@ -106,3 +106,10 @@ book.exists		= "The phonebook-entry you wish to add is already existing."
 book.noEntry	= "No Entry Selected!"
 book.fillFields = "Please fill all Fields"
 book.warning	= "Attention"
+title.sip.codecs.title = Codecs
+codecs.select 	= < Select
+codecs.unselect = Unselect >
+codecs.up		= Up ^
+codecs.down		= Down v
+codecs.audio.selected	= Selected Audio Codecs
+codecs.audio.avail		= Available Audio Codecs
