--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_fr.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_fr.properties
@@ -106,3 +106,10 @@ book.exists		= "The phonebook-entry you wish to add is already existing."
 book.noEntry	= "No Entry Selected!"
 book.fillFields = "Please fill all Fields"
 book.warning	= "Attention"
+title.sip.codecs.title = Codecs
+codecs.select 	= < Select
+codecs.unselect = Unselect >
+codecs.up		= Up ^
+codecs.down		= Down v
+codecs.audio.selected	= Selected Audio Codecs
+codecs.audio.avail		= Available Audio Codecs
