SPARK-1097: Delete the obsolete Available translation string from the i18n file
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11913 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -209,6 +209,11 @@
 ## 	   Added key: 'label.audio.device'
 ## 	   Added key: 'label.video.device'
 ## 	   Added key: 'button.re.detect'
+##
+## 2.6.0 beta 1
+##     Added key: 'menuitem.block.contact'
+##     Added key: 'menuitem.unblock.contact'
+##     Removed key: 'status.available'
 
 accept = Accept
 active = Active
@@ -796,7 +801,6 @@ message.your.voice.revoked = Your voice has been revoked
 message.groupchat.require.password = This group chat room requires a password to enter
 message.search.for.history = Search conversation history
 
-status.available = Available
 status.away = Away
 status.custom.messages = Custom messages
 status.do.not.disturb = Do not disturb
