--- a/src/resources/i18n/spark_i18n_es.properties
+++ b/src/resources/i18n/spark_i18n_es.properties
@@ -1,5 +1,5 @@
 # Traduccion al espanol por Jeffrey Steve Borbon Sanabria (jeffto@aclibre.org)
-# Corrección de Juan Gabriel
+# Correcci\u00f3n de Juan Gabriel
 # Noviembre 2008
 
 accept = Aceptar
@@ -537,7 +537,6 @@ retry = Reintentar
 room.name = Nombre del cuarto
 save = Guardar
 
-status.available = Disponible
 status.away = Ausente
 status.custom.messages = Mensaje personalizado
 status.do.not.disturb = No molestar
