--- a/src/resources/i18n/spark_i18n_fi.properties
+++ b/src/resources/i18n/spark_i18n_fi.properties
@@ -201,7 +201,9 @@
 ##     Added key: 'label.contactlist.avatarsize'
 ##     Added key: 'title.qq.registration'
 ##     Added key: 'message.enter.qq'
-
+##
+## 2.6.0 beta 1
+##     Removed key status.available
 
 
 ok = Ok
@@ -631,7 +633,6 @@ message.server.unavailable = Palvelimeen ei saada yhteytt\ufffd, virheellinen ni
 message.unrecoverable.error = Virheellinen k\ufffdytt\ufffdj\ufffdnimi tai salasana.
 message.waiting.for.user.to.join = Odotellaan k\ufffdytt\ufffdj\ufffdn {0} liittymist\ufffd.
 
-status.available = Paikalla
 status.away = Poissa
 status.custom.messages = Muokatut viestit
 status.do.not.disturb = \ufffdl\ufffd h\ufffdiritse
