--- a/src/resources/i18n/spark_i18n_ko.properties
+++ b/src/resources/i18n/spark_i18n_ko.properties
@@ -209,6 +209,9 @@
 ## 	   Added key: 'label.audio.device'
 ## 	   Added key: 'label.video.device'
 ## 	   Added key: 'button.re.detect'
+##
+## 2.6.0 beta 1
+##     Removed key status.available
 
 
 
@@ -797,7 +800,6 @@ message.your.voice.revoked = voice\uac00 \ucde8\uc18c\ub418\uc5c8\uc2b5\ub2c8\ub
 message.groupchat.require.password = \uc774 \uadf8\ub8f9\ucc57\uc5d0 \ub4e4\uc5b4\uac00\uae30 \uc704\ud574\uc11c\ub294 \ube44\ubc00\ubc88\ud638\uac00 \ud544\uc694\ud569\ub2c8\ub2e4.
 message.search.for.history = \ub300\ud654\uae30\ub85d \uac80\uc0c9
 
-status.available = \uc628\ub77c\uc778
 status.away = \uc790\ub9ac\ube44\uc6c0
 status.custom.messages = \uc124\uc815\uba54\uc2dc\uc9c0
 status.do.not.disturb = \ub2e4\ub978\uc6a9\ubb34\uc911
