--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -188,6 +188,9 @@
 ## 2.6.0
 ##
 ## 	   Added key: 'apply'
+##
+## 2.6.0 beta 1
+##     Removed key status.available
 
 accept = Priimti
 active = Aktyvu
@@ -763,7 +766,7 @@ message.your.revoked.granted = Netekote administratoriaus privilegij\u0173.
 message.your.voice.granted = \u0160iame pokalbyje Jums suteiktas balsas.
 message.your.voice.revoked = Netekote balso.
 message.groupchat.require.password = \u0160i pokalbi\u0173 grup\u0117 priims, jei \u012fvesite slapta\u017eod\u012f.
-status.available = Pasiekiamas
+
 status.away = Pasitrauk\u0119s
 status.custom.messages = Susikurtos b\u016bsenos
 status.do.not.disturb = Netrukdykite
