--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -519,7 +519,6 @@ menuitem.copy.to = Copiar para
 tree.conference.services = Servi\u00e7os de Confer\u00eancia
 tree.users.in.room = Usu\u00e1rios na Sala
 
-status.available = Dispon\u00edvel
 status.away = Ausente
 status.custom.messages = Mensagem personalizada
 status.do.not.disturb = N\u00e3o incomode
@@ -555,14 +554,14 @@ tooltip.view.history = Ver hist\u00f3rico de conversas
 tooltip.view.changelog = Ver Log de mudan\u00e7as
 tooltip.view.readme = Ver LeiaMe
 tooltip.notifications = Prefer\u00eancias de notifica\u00e7\u00e3o de novos Chats.
-available=Disponível
+available=Dispon\u00edvel
 broadcast=Espalhar
 offline=Offline
 online=Online
 participants=Participantes
 unfiled=Indefinido
-user.has.signed.in=Usuário entrou
-user.has.signed.off=Usuário saiu
+user.has.signed.in=Usu\u00e1rio entrou
+user.has.signed.off=Usu\u00e1rio saiu
 while.offline=Enquanto Offline
 action.clear=Limpar
 action.copy=Copiar
@@ -571,7 +570,7 @@ action.paste=Colar
 action.print=Imprimir
 action.save=Salvar
 action.select.all=Selecionar Tudo
-button.add.user=Adicionar Usuário
+button.add.user=Adicionar Usu\u00e1rio
 button.add2=Adicionar
 button.copy.to.clipboard=Copiar
 button.quit=Sair
@@ -584,11 +583,11 @@ button.tasks.all=Todas
 button.view.profile=Ver Perfil
 checkbox.show.avatars.in.contactlist=Mostrar Avatar na lista de contatos
 checkbox.tabs.on.top=Mostrar Chat no Topo (Necessita Reiniciar)
-checkbox.use.compression=Usar Compressão
+checkbox.use.compression=Usar Compress\u00e3o
 delete.log.permanently=Apagar Permanentemente
 delete.permanently=Apagar Permanentemente?
-gateway.username.password.error=Informe Usuário e Senha.
-group.empty=Nenhum usuário online.
+gateway.username.password.error=Informe Usu\u00e1rio e Senha.
+group.empty=Nenhum usu\u00e1rio online.
 group.offline=Grupo Offline
 label.add.task=Adicionar tarefa
 label.conflict.error=
@@ -598,32 +597,32 @@ label.network=&Rede
 label.received=&Recebido
 label.show=Mostrar:
 label.timeformat=Usar {0}
-label.unable.to.add.contact=Impossível adicionar contato.
-label.user.on.public.network=Usuário está em uma rede pública
-menuitem.delete.login.information=Remover informação de login
+label.unable.to.add.contact=Imposs\u00edvel adicionar contato.
+label.user.on.public.network=Usu\u00e1rio est\u00e1 em uma rede p\u00fablica
+menuitem.delete.login.information=Remover informa\u00e7\u00e3o de login
 menuitem.dial=Discar
-menuitem.enter.login.information=Entrar com informação de login
-menuitem.languages=Traduções
+menuitem.enter.login.information=Entrar com informa\u00e7\u00e3o de login
+menuitem.languages=Tradu\u00e7\u00f5es
 menuitem.sign.in.at.login=Conectar ao iniciar
 menuitem.sign.out=Sair
-menuitem.user.guide=Guia do Usuário
+menuitem.user.guide=Guia do Usu\u00e1rio
 message.autenticating=Autenticando
-message.buzz.alert.notification=Chamar Atenção
-message.buzz.sent=Enviar alerta ao usuário.
-message.cannot.add.contact.to.shared.group=Você não pode adicionar contatos a um grupo compartilhado.
-message.enter.xmpp=Entre com seu usuário e senha XMPP.
-message.invalid.status=Especifique um status válido.
-message.invalid.username.password=Usuário e Senha inválidos.
-message.no.updates=Não há updates.
+message.buzz.alert.notification=Chamar Aten\u00e7\u00e3o
+message.buzz.sent=Enviar alerta ao usu\u00e1rio.
+message.cannot.add.contact.to.shared.group=Voc\u00ea n\u00e3o pode adicionar contatos a um grupo compartilhado.
+message.enter.xmpp=Entre com seu usu\u00e1rio e senha XMPP.
+message.invalid.status=Especifique um status v\u00e1lido.
+message.invalid.username.password=Usu\u00e1rio e Senha inv\u00e1lidos.
+message.no.updates=N\u00e3o h\u00e1 updates.
 message.reconnect.attempting=Tentando...
-message.reconnect.failed=Reconexão Falhou.
+message.reconnect.failed=Reconex\u00e3o Falhou.
 message.reconnect.wait=Reconectando em {0} segundos.
-message.restart.spark.changes=O plugin será removido na próxima inicialização.
+message.restart.spark.changes=O plugin ser\u00e1 removido na pr\u00f3xima inicializa\u00e7\u00e3o.
 title.about=Sobre
 title.download.complete=Download completo
 title.notes=Notas
 title.password=Senha
-tooltip.place.voice.call=Chamar este Usuário
+tooltip.place.voice.call=Chamar este Usu\u00e1rio
 tooltip.send.email=Enviar Email
 tooltip.start.chat=Iniciar conversa
 menuitem.quit=Sair
