--- a/src/resources/i18n/spark_i18n_ky.properties
+++ b/src/resources/i18n/spark_i18n_ky.properties
@@ -210,6 +210,9 @@
 ##	Contact: just_ilyas [at] yahoo [dot] com
 ##	Modified: 28.10.2009
 ##
+##
+## 2.6.0 beta 1
+##     Removed key status.available
 
 accept= \u041a\u0430\u0431\u044b\u043b \u0430\u043b\u0443\u0443
 action.clear=\u0422\u0430\u0437\u0430\u043b\u043e\u043e
@@ -769,7 +772,6 @@ reject= \u0427\u0435\u0442\u043a\u0435 \u043a\u0430\u0433\u0443\u0443
 retry= \u041a\u0430\u0439\u0442\u0430\u043b\u043e\u043e
 room.name= \u0411\u04e9\u043b\u043c\u04e9\u043d\u04af\u043d \u0430\u0442\u044b
 save= \u0421\u0430\u043a\u0442\u043e\u043e
-status.available=\u0411\u0430\u0440\u043c\u044b\u043d
 status.away=\u041e\u0440\u0443\u043d\u0434\u0430 \u044d\u043c\u0435\u0441
 status.custom.messages=\u0416\u04e9\u043d\u04e9\u043a\u04e9\u0439 \u0442\u0435\u043a\u0441\u0442
 status.do.not.disturb=\u0422\u044b\u043d\u0447\u044b\u043c\u0434\u044b \u0430\u043b\u0431\u0430
