SPARK-1163: Spark displays wrong error when nickname change is forbidden
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11923 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -214,6 +214,7 @@
 ##     Added key: 'menuitem.block.contact'
 ##     Added key: 'menuitem.unblock.contact'
 ##     Removed key: 'status.available'
+##     Added key: 'message.nickname.not.acceptable'
 
 accept = Accept
 active = Active
@@ -681,6 +682,7 @@ message.negotiation.file.transfer = Negotiating file transfer with {0}, please w
 message.new.message = New message from {0}
 message.new.spark.available = {0} is now available, would you like to install?
 message.nickname.in.use = Nickname in use, please specify another Nickname
+message.nickname.not.acceptable = Nickname change is not enabled!
 message.no.avatar.found = No avatar was configured by the user
 message.no.caller.id = No caller ID available
 message.no.description.available = No description available
