SPARK-284 - Same Alt-? hotkeys set for different options on the same menu
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11957 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
@@ -2,3 +2,4 @@ title.spellchecker = Spellchecker
 
 preference.spellcheckingEnabled = Enable Spellchecking
 preference.autoSpellcheckingEnabled = Enable Auto Spellchecking
+preference.language = &Language
