--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -193,7 +193,7 @@ button.send = Senden
 button.unset.file.explorer = entferne gespeicherten File Browser
 button.view.profile = Gesamte Profile anzeigen
 
-checkbox.save.password = &Passwort speichern
+checkbox.save.password = Pass&wort speichern
 checkbox.auto.login = &Automatisches Login
 checkbox.use.proxy.server = &Proxy Server benutzen
 checkbox.auto.discover.port = &Host und Port automatisch bestimmen
@@ -250,7 +250,7 @@ label.old.ssl = &Benutze ALTE SSL Port Methode
 label.host = &Host
 label.resource = &Ressource
 label.protocol = &Protokoll
-label.accounts = &Accounts
+label.accounts = A&ccounts
 label.receieved = &Empfangen
 label.transfer.timeout = &Zeitspanne bis zum Abbruch des Transfers (min):
 label.transfer.download.directory = &Download Verzeichnis:
