fix spark ALT-?
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11965 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -202,26 +202,26 @@ checkbox.private.room = Raum &ist Privat
 checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
 checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
 checkbox.disable.chat.history = &Den Chatverlauf nicht speichern
-checkbox.disable.prev.chat.history = Die letzte Unterhaltung nicht anzeigen
+checkbox.disable.prev.chat.history = Die letzte &Unterhaltung nicht anzeigen
 checkbox.show.toaster = Informationen in einem &Popup anzeigen
 checkbox.window.to.front = &Fenster in den Vordergrund bringen
-checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue Nachricht &eintrifft
-checkbox.play.sound.when.offline = Klang abspielen wenn ein Teilnehmer &offline geht
-checkbox.play.sound.on.outgoing.message = Klang abspielen wenn Nachricht ge&sendet wird
-checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz Einladung
+checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue &Nachricht eintrifft
+checkbox.play.sound.when.offline = Klang abspielen wenn ein &Teilnehmer &offline geht
+checkbox.play.sound.on.outgoing.message = &Klang abspielen wenn Nachricht ge&sendet wird
+checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz &Einladung
 checkbox.idle.enabled = &Automatisches 'Away' bei Inaktivität aktivieren
 checkbox.launch.on.startup = &Spark bei Systemstart ausführen
-checkbox.start.in.tray = &Spark automatisch in der Taskleiste starten
+checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
-checkbox.allow.buzz = "Buzzer" Funktion aktivieren.
-checkbox.enable.emoticons = Em&oticons aktivieren 
+checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.
+checkbox.enable.emoticons = &Emoticons aktivieren 
 checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
-checkbox.notify.user.comes.online = Benachrichtigen, wenn ein User Online kommt
-checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein User Offline geht
-checkbox.notify.typing.systemtray = Zeige Schreibhinweise im System Tray 
-checkbox.notify.systemtray = Zeige neue Nachrichten im System Tray
-checkbox.show.avatars.in.contactlist = Zeige Avatars in der Kontaktliste
+checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User Online kommt
+checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein &User Offline geht
+checkbox.notify.typing.systemtray = Zeige &Schreibhinweise im System Tray 
+checkbox.notify.systemtray = Zeige &neue Nachrichten im System Tray
+checkbox.show.avatars.in.contactlist = &Zeige Avatars in der Kontaktliste
 checkbox.broadcast.hide.offline.user = Offline User ausblenden
 checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
 checkbox.use.compression = Komprimierung verwenden 
@@ -237,7 +237,7 @@ label.name = &Name
 label.room.name = &Raumname
 label.room.topic= Raum &Thema
 label.password = &Passwort
-label.confirm.password = &Neues Passwort wiederholen
+label.confirm.password = Neues Passwort &wiederholen
 label.server = &Server
 label.create.account = &Account Erstellen
 label.close = &Schließen
@@ -280,17 +280,17 @@ label.dial = &Wählen
 label.minutes.before.stale.chat = &Ein Chatfenster als 'inaktiv' kennzeichnen nach (min)
 label.company = &Firma
 label.street.address = &Straße
-label.city = &Stadt
-label.state.and.province = S&taat/Region
+label.city = Sta&dt
+label.state.and.province = Staat/&Region
 label.postal.code = &Postleitzahl
 label.country = &Land
 label.job.title = &Beruf
 label.department = &Abteilung
 label.phone = &Telefon
-label.fax = &Fax
+label.fax = Fa&x
 label.mobile = &Mobil
 label.web.page = &Internetseite
-label.pager = &Pager
+label.pager = Pa&ger
 label.first.name = &Vorname
 label.middle.name = &Zuname
 label.last.name = &Nachname
@@ -299,7 +299,7 @@ label.jid = &JID
 label.search.service = &Such-Service
 label.xmpp.port = &XMPP Port
 label.response.timeout = &Zeitspanne bis zum Abbruch (sec)
-label.time.till.idle = &Zeitspanne für automatisches 'Away' bei Inaktivität (min)
+label.time.till.idle = Zeitspanne für automatisches 'Away' bei &Inaktivität (min)
 label.jabber.id = &Jabber ID
 label.group = &Gruppe
 label.enter.group.name = Namen für neue Gruppe eingeben
@@ -307,10 +307,10 @@ label.network = Netzwerk
 label.unable.to.add.contact = Kann Kontakt nicht hinzufügen.
 label.conflict.error = User ist bereits Angemeldet. Login wird verweigert.
 label.message.style = &Nachrichten Style
-label.emoticons = &Emoticons
-label.contactlist.fontsize = Kontaktliste Schriftgröße:
-label.chatroom.fontsize = Chatroom Schriftgröße:
-label.contactlist.avatarsize = Kontaktliste Avatargröße:
+label.emoticons = E&moticons
+label.contactlist.fontsize = Kontaktliste &Schriftgröße:
+label.chatroom.fontsize = &Chatroom Schriftgröße:
+label.contactlist.avatarsize = Kontaktliste &Avatargröße:
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Welche PKI Methode?
@@ -613,7 +613,7 @@ title.lookup.profile = Profil suchen
 title.add.search.service = Such-Service hinzufügen
 title.person.search = Suche nach Personen
 title.login.settings = Login Einstellungen
-title.login = Login
+title.login = &Login
 title.downloading.im.client = Download IM Programm
 title.upgrading.client = Programm upgraden
 title.cancelled = Abgebrochen
@@ -627,7 +627,7 @@ title.add.contact = Neuen Kontakt hinzufügen
 title.file.transfer.preferences = Datei Transfer Einstellungen
 title.file.transfer = Datei Transfer
 title.appearance.preferences = Anpassung
-title.appearance.showVCards = Zeige VCards in der Kontaktliste
+title.appearance.showVCards = Zeige &VCards in der Kontaktliste
 title.input.fileexplorer = Geben sie den Namen ihres File Browsers ein:
 title.input.openwith = Geben sie den Namen des Programms ein, welches sie nutzen möchten:
 title.error.find.app = Es konnte keine passende Anwendung gefunden werden.
@@ -649,7 +649,7 @@ menuitem.plugins = Plugins
 menuitem.logout.no.status = Ausloggen
 menuitem.logout.with.status = Ausloggen mit Nachricht
 menuitem.show.traffic = Verbindungsdaten
-menuitem.check.for.updates = Ist eine neuere Version verfügbar?
+menuitem.check.for.updates = Ist eine neuere &Version verfügbar?
 menuitem.help = Hilfe
 menuitem.preferences = Einstellungen
 menuitem.about = Über
@@ -722,10 +722,10 @@ menuitem.show.offline.group = Offline User gruppieren
 menuitem.move.to = Verschieben nach
 menuitem.copy.to = Kopieren nach
 menuitem.user.guide = Benutzerhandbuch
-menuitem.add.groupchat.myname  = Meinen Namen hervorheben, wenn ihn jemand schreibt
-menuitem.add.groupchat.mytext  = Meinen Text hervorheben, wenn ich etwas schreibe
-menuitem.add.groupchat.popname = Zeige ein Popup, wenn jemand meinen Namen schreibt
-menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verlässt 
+menuitem.add.groupchat.myname  = Meinen &Namen hervorheben, wenn ihn jemand schreibt
+menuitem.add.groupchat.mytext  = Meinen &Text hervorheben, wenn ich etwas schreibe
+menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
+menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verlässt 
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = Öffne alle Gruppen
 menuitem.collapse.all.groups = Schließe alle Gruppen
